--- a/Temps/index.html
+++ b/Temps/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html>
-    <head><title>Index App</title></head>
-    <body>
-        Hello World!!!
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>My First Webpage</title>
+  </head>
+
+  <body>
+    <h1>Hello World!</h1>
+    <p>
+      <strong> ipsum dolor</strong> sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+  incididunt ut labore et dolore magna aliqua.
+    </p>
+    <p>
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+  nisi ut aliquip ex ea commodo consequat.
+  <ol>
+    <li>Item1</li>
+    <li>Item2</li>
+    <li><a href="https://www.github.com/Sage-ArtZ/">Item3</a></li>
+  </ol>
+    </p>
+  </body>
 </html>
